add suffix to KB name for unique name

--- a/3-peak-load-manager/3_peak_load_manager.ipynb
+++ b/3-peak-load-manager/3_peak_load_manager.ipynb
@@ -574,7 +574,7 @@
     "# For multi-modal RAG While instantiating BedrockKnowledgeBase, pass multi_modal= True and choose the parser you want to use\n",
     "\n",
     "knowledge_base = BedrockKnowledgeBase(\n",
-    "    kb_name= knowledge_base_name,\n",
+    "    kb_name= f'{knowledge_base_name}_{suffix}',\n",
     "    kb_description=knowledge_base_description,\n",
     "    data_sources=data,\n",
     "    multi_modal= True,\n",
